# gst-v4l2loopback

./: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  autogen.sh  build.sh  configure.ac  gst-app.vala  gst-tttfilter.vala  gst-v4lsink-loopback.vala  gst-v4lsink.vala  gstreamer-0.10.vapi  test.vala  v4l2.vapi  v4l2loopback.c  v4l2loopback.h  v4l2sys.vapi  v4lsys.vapi  xmlPipe.gst
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  v4lsink.default.ex  v4lsink.doc-base.EX  watch.ex
